Refactor Bitvavo API client methods for improved error handling and serialization; add unit tests for API requests